--- a/src/main/resources/templates/mainFrame.html
+++ b/src/main/resources/templates/mainFrame.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8"/>
     <title>东方宇信中央管理系统</title>
@@ -8,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="plugins/themes/icon.css"/>
     <script type="text/javascript" src="plugins/jquery.min.js"></script>
     <script type="text/javascript" src="plugins/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="sagittarius/mainFrame.js"></script>
 </head>
 <body class="easyui-layout">
 <div data-options="region:'north',split:true" style="height:100px;background: cornflowerblue;">
@@ -15,9 +17,37 @@
         <h1>东方宇信中央管理系统</h1>
     </div>
 </div>
-<div data-options="region:'west',title:'功能列表',split:true" style="width:150px;">
-    <!-- #include PathType = "component/function.html" --> 
+<div id="west" data-options="region:'west',title:'功能列表',split:true" style="width:250px;">
+    <div id="aa" class="easyui-accordion" style="width:100%;height:100%;">
+        <div title="主档维护" data-options="selected:true" style="overflow:auto;padding:10px;">
+            <li><a id="btn2" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-1');">原材料维护</a>
+            </li>
+            <li><a id="btn3" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-2');">人员信息维护</a>
+            </li>
+            <li><a id="btn4" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-3');">车辆信息维护</a>
+            </li>
+            <li><a id="btn5" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-4');">材料分类信息维护</a>
+            </li>
+            <li><a id="btn6" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-5');">报销项目信息维护</a>
+            </li>
+            <li><a id="btn6" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-6');">成本分类信息维护</a>
+            </li>
+        </div>
+        <div title="成本统计" data-options="selected:true" style="padding:10px;">
+            content2
+        </div>
+        <div title="报销系统">
+            content3
+        </div>
+    </div>
 </div>
-<div data-options="region:'center',title:'center title'" style="padding:5px;background:#eee;"></div>
+<div id="mainPanel" data-options="region:'center',title:'center title'"
+     style="padding:5px;background:#eee;">
+</div>
+<div>
+    <!--<input type="hidden" id ="contextPaht" value="${#request.getContextPath()}" />-->
+    <!--<input type="hidden" id ="contextPaht" th:text="${#request.getContextPath()}" />-->
+    <script th:inline="javascript"> var contextRoot = [[${singlePerson}]]; </script>
+</div>
 </body>
 </html>
