--- a/src/main/resources/templates/materialMaster.html
+++ b/src/main/resources/templates/materialMaster.html
@@ -42,29 +42,27 @@
     <div id="toolbar">
         <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="new()">新增</a>
         <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="edit()">编辑</a>
-        <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-remove" plain="true"
-           onclick="remove()">删除</a>
+        <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="remove()">删除</a>
     </div>
-    <!--编辑窗口 -->
-    <div id="dlg" class="easyui-dialog" style="width:400px"
-         closed="true" buttons="#dlg-buttons">
-        <form id="fm" method="post" novalidate="novalidate" style="margin:0;padding:20px 50px">
-            <div style="margin-bottom:20px;font-size:14px;border-bottom:1px solid #ccc">User Information</div>
-            <div style="margin-bottom:10px">
-                <input name="firstname" class="easyui-textbox" required="true" label="First Name:" style="width:100%"/>
-            </div>
-            <div style="margin-bottom:10px">
-                <input name="lastname" class="easyui-textbox" required="true" label="Last Name:" style="width:100%"/>
-            </div>
-            <div style="margin-bottom:10px">
-                <input name="phone" class="easyui-textbox" required="true" label="Phone:" style="width:100%"/>
-            </div>
-            <div style="margin-bottom:10px">
-                <input name="email" class="easyui-textbox" required="true" validType="email" label="Email:"
-                       style="width:100%"/>
-            </div>
-        </form>
-    </div>
+    <!--&lt;!&ndash;编辑窗口 &ndash;&gt;-->
+    <!--<div id="dlg" class="easyui-dialog" style="width:400px" closed="true" buttons="#dlg-buttons">-->
+    <!--<form id="fm" method="post" novalidate="novalidate" style="margin:0;padding:20px 50px">-->
+    <!--<div style="margin-bottom:20px;font-size:14px;border-bottom:1px solid #ccc">原材料信息维护</div>-->
+    <!--<div style="margin-bottom:10px">-->
+    <!--<input name="firstname" class="easyui-textbox" required="true" label="First Name:" style="width:100%"/>-->
+    <!--</div>-->
+    <!--<div style="margin-bottom:10px">-->
+    <!--<input name="lastname" class="easyui-textbox" required="true" label="Last Name:" style="width:100%"/>-->
+    <!--</div>-->
+    <!--<div style="margin-bottom:10px">-->
+    <!--<input name="phone" class="easyui-textbox" required="true" label="Phone:" style="width:100%"/>-->
+    <!--</div>-->
+    <!--<div style="margin-bottom:10px">-->
+    <!--<input name="email" class="easyui-textbox" required="true" validType="email" label="Email:"-->
+    <!--style="width:100%"/>-->
+    <!--</div>-->
+    <!--</form>-->
+    <!--</div>-->
 </div>
 </body>
 </html>
