--- a/src/main/resources/templates/unitMaster.html
+++ b/src/main/resources/templates/unitMaster.html
@@ -12,14 +12,7 @@
 </head>
 <body class="easyui-layout">
 <div data-options="region:'center'">
-    <table id="dg" title="度量衡信息一览" class="easyui-datagrid" style="width:100%;height:100%" url="/unitMaster/init"
-           toolbar="#toolbar" pagination="true" rownumbers="true" fitColumns="false" singleSelect="true">
-        <thead>
-        <tr>
-            <th data-options="field:'code',width:200,align:'center'">单位编号</th>
-            <th data-options="field:'name',width:200,align:'center'">单位名称</th>
-        </tr>
-        </thead>
+    <table id="dg" title="度量衡信息一览" class="easyui-datagrid" style="width:95%;height:95%">
     </table>
     <!-- datagrid功能菜单 -->
     <div id="toolbar">
