--- a/src/main/resources/templates/unitMaster.html
+++ b/src/main/resources/templates/unitMaster.html
@@ -25,7 +25,7 @@
         <form id="fm" method="post" novalidate="novalidate" style="margin:0;padding:20px 50px">
             <div style="margin-bottom:20px;font-size:14px;border-bottom:1px solid #ccc">度量衡信息维护</div>
             <div style="margin-bottom:10px" hidden="hidden">
-                <input name="id" class="easyui-textbox" required="true" label="主键" style="width:100%"/>
+                <input name="id" class="easyui-textbox" label="主键" style="width:100%"/>
             </div>
             <div style="margin-bottom:10px">
                 <input name="code" class="easyui-textbox" required="true" label="单位编号" style="width:100%"/>
