用户信息维护界面

--- a/src/main/resources/templates/mainFrame.html
+++ b/src/main/resources/templates/mainFrame.html
@@ -22,11 +22,11 @@
         <div title="主档维护" data-options="selected:true" style="overflow:auto;padding:10px;">
             <li><a id="btn1" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-1');">原材料分类维护</a>
             </li>
-            <li><a id="btn2" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-2');">人员信息维护</a>
+            <li><a id="btn2" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-2');">原材料维护</a>
             </li>
-            <li><a id="btn3" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-3');">车辆信息维护</a>
+            <li><a id="btn3" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-3');">人员信息维护</a>
             </li>
-            <li><a id="btn4" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-4');">材料分类信息维护</a>
+            <li><a id="btn4" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-4');">人员信息维护</a>
             </li>
             <li><a id="btn5" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-5');">报销项目信息维护</a>
             </li>
