用户信息维护界面

--- a/src/main/resources/templates/userMaster.html
+++ b/src/main/resources/templates/userMaster.html
@@ -44,11 +44,11 @@
                        data-options="max:99, precision:0, min:0"/>
             </div>
             <div style="margin-bottom:10px">
-                <input name="post" class="easyui-combobox" required="true" style="width:100%" label="职位"
-                       data-options="valueField: 'code',textField: 'value', url:'/???'"/>
+                <input id="post" name="post" class="easyui-combobox" required="true" style="width:100%" label="职位"
+                       data-options="valueField: 'dictCode',textField: 'dictCodeName'"/>
             </div>
             <div style="margin-bottom:10px">
-                <input name="department" class="easyui-combobox" required="true" style="width:100%" label="所属部门"
+                <input ="department" name="department" class="easyui-combobox" required="true" style="width:100%" label="所属部门"
                        data-options="valueField: 'code',textField: 'value', url:'/???'"/>
             </div>
             <div style="margin-bottom:10px">
