--- a/src/main/resources/templates/userMaster.html
+++ b/src/main/resources/templates/userMaster.html
@@ -48,15 +48,15 @@
                        data-options="valueField: 'dictCode',textField: 'dictCodeName'"/>
             </div>
             <div style="margin-bottom:10px">
-                <input ="department" name="department" class="easyui-combobox" required="true" style="width:100%" label="所属部门"
-                       data-options="valueField: 'code',textField: 'value', url:'/???'"/>
+                <input id="department" name="department" class="easyui-combobox" required="true" style="width:100%" label="所属部门"
+                       data-options="valueField: 'dictCode',textField: 'dictCodeName'"/>
             </div>
             <div style="margin-bottom:10px">
                 <input name="contact" class="easyui-textbox" required="true" label="联系电话" style="width:100%"
                        data-options="validType:['length[0,30]']"/>
             </div>
             <div style="margin-bottom:10px">
-                <input name="contact" class="easyui-textbox" required="true" label="身份证号" style="width:100%"
+                <input name="idNumber" class="easyui-textbox" required="true" label="身份证号" style="width:100%"
                        data-options="validType:['length[0,18]']"/>
             </div>
         </form>
