--- a/src/main/resources/templates/mainFrame.html
+++ b/src/main/resources/templates/mainFrame.html
@@ -26,7 +26,7 @@
             </li>
             <li><a id="btn3" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-3');">人员信息维护</a>
             </li>
-            <li><a id="btn4" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-4');">人员信息维护</a>
+            <li><a id="btn4" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-4');">车辆信息维护</a>
             </li>
             <li><a id="btn5" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-5');">报销项目信息维护</a>
             </li>
