项目信息维护界面

--- a/src/main/resources/templates/mainFrame.html
+++ b/src/main/resources/templates/mainFrame.html
@@ -32,9 +32,11 @@
             </li>
             <li><a id="btn6" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-6');">成本一级分类信息维护</a>
             </li>
-            <li><a id="btn6" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-7');">成本二级分类信息维护</a>
+            <li><a id="btn7" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-7');">成本二级分类信息维护</a>
             </li>
-            <li><a id="btn7" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-8');">度量衡信息维护</a>
+            <li><a id="btn8" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-8');">度量衡信息维护</a>
+            </li>
+            <li><a id="btn9" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-9');">项目信息维护</a>
             </li>
         </div>
         <div title="成本统计" data-options="selected:true" style="padding:10px;">
