--- a/src/main/resources/templates/mainFrame.html
+++ b/src/main/resources/templates/mainFrame.html
@@ -30,9 +30,9 @@
             </li>
             <li><a id="btn5" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-5');">报销项目信息维护</a>
             </li>
-            <li><a id="btn6" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-6');">成本一级分类信息维护</a>
+            <li><a id="btn6" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-6');">成本分类信息维护</a>
             </li>
-            <li><a id="btn7" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-7');">成本二级分类信息维护</a>
+            <li><a id="btn7" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-7');">成本项目信息维护</a>
             </li>
             <li><a id="btn8" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-8');">度量衡信息维护</a>
             </li>
