原材料一级分类维护界面

--- a/src/main/resources/templates/mainFrame.html
+++ b/src/main/resources/templates/mainFrame.html
@@ -20,9 +20,9 @@
 <div id="west" data-options="region:'west',title:'功能列表',split:true" style="width:250px;">
     <div id="aa" class="easyui-accordion" style="width:100%;height:100%;">
         <div title="主档维护" data-options="selected:true" style="overflow:auto;padding:10px;">
-            <li><a id="btn1" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-1');">原材料分类维护</a>
+            <li><a id="btn1" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-1');">原材料一级分类维护</a>
             </li>
-            <li><a id="btn2" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-2');">原材料维护</a>
+            <li><a id="btn2" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-2');">原材料二级分类维护</a>
             </li>
             <li><a id="btn3" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-3');">人员信息维护</a>
             </li>
