临时保存一下

--- a/src/main/resources/templates/mainFrame.html
+++ b/src/main/resources/templates/mainFrame.html
@@ -38,6 +38,8 @@
             </li>
             <li><a id="btn9" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-9');">项目信息维护</a>
             </li>
+            <li><a id="btn9" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-10');">原料信息维护</a>
+            </li>
         </div>
         <div title="成本统计" data-options="selected:true" style="padding:10px;">
             content2
