调整菜单目录结构

--- a/src/main/resources/templates/mainFrame.html
+++ b/src/main/resources/templates/mainFrame.html
@@ -20,25 +20,27 @@
 <div id="west" data-options="region:'west',title:'功能列表',split:true" style="width:250px;">
     <div id="aa" class="easyui-accordion" style="width:100%;height:100%;">
         <div title="主档维护" data-options="selected:true" style="overflow:auto;padding:10px;">
-            <li><a id="btn1" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-1');">原材料一级分类维护</a>
+            <li><a id="btn11" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-1');">原材料一级分类维护</a>
             </li>
-            <li><a id="btn2" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-2');">原材料二级分类维护</a>
+            <li><a id="btn12" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-2');">原材料二级分类维护</a>
             </li>
-            <li><a id="btn3" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-3');">人员信息维护</a>
+            <li><a id="btn13" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-3');">人员信息维护</a>
             </li>
-            <li><a id="btn4" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-4');">车辆信息维护</a>
+            <li><a id="btn14" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-4');">车辆信息维护</a>
             </li>
-            <li><a id="btn5" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-5');">报销项目信息维护</a>
+            <li><a id="btn15" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-5');">报销项目信息维护</a>
             </li>
-            <li><a id="btn6" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-6');">成本分类信息维护</a>
+            <li><a id="btn16" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-6');">成本分类信息维护</a>
             </li>
-            <li><a id="btn7" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-7');">成本项目信息维护</a>
+            <li><a id="btn17" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-7');">成本项目信息维护</a>
             </li>
-            <li><a id="btn8" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-8');">度量衡信息维护</a>
+            <li><a id="btn18" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-8');">度量衡信息维护</a>
             </li>
-            <li><a id="btn9" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-9');">项目信息维护</a>
+            <li><a id="btn19" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-9');">原料信息维护</a>
             </li>
-            <li><a id="btn9" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('1-10');">原料信息维护</a>
+        </div>
+        <div title="项目信息维护" data-options="selected:true" style="overflow:auto;padding:10px;">
+            <li><a id="btn21" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('2-1');">项目信息维护</a>
             </li>
         </div>
         <div title="成本统计" data-options="selected:true" style="padding:10px;">
