--- a/src/main/resources/templates/mainFrame.html
+++ b/src/main/resources/templates/mainFrame.html
@@ -43,12 +43,17 @@
             <div title="项目信息维护" data-options="selected:true" style="overflow:auto;padding:10px;">
                 <li><a id="btn21" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('2-1');">项目信息维护</a>
                 </li>
+                <li><a id="btn22" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('2-2');">项目开工确认</a>
+                </li>
+                <li><a id="btn23" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('2-3');">项目完工确认</a>
+                </li>
             </div>
             <div title="成本统计" data-options="selected:true" style="padding:10px;">
                 content2
             </div>
             <div title="报销系统">
-                content3
+                <li><a id="btn41" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('4-1');">项目报销</a>
+                </li>
             </div>
         </div>
     </div>
