--- a/src/main/resources/templates/mainFrame.html
+++ b/src/main/resources/templates/mainFrame.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="sagittarius/mainFrame.js"></script>
 </head>
 <body style="width:100%;height:100%;margin:1px;">
-<div id="mainLayout" class="easyui-layout" style="width:1900px;height:1000px;">
+<div id="mainLayout" class="easyui-layout" style="width:1400px;height:750px;">
     <div data-options="region:'north',split:true" style="height:100px;background: cornflowerblue;">
         <div>
             <h1>东方宇信中央管理系统</h1>
@@ -41,7 +41,7 @@
                 </li>
             </div>
             <div title="项目信息维护" data-options="selected:true" style="overflow:auto;padding:10px;">
-                <li><a id="btn21" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('2-1');">项目信息维护</a>
+                <li><a id="btn21" href="#" class="easyui-linkbutton" style="background-color: transparent" data-options="" onclick="jumpMenu('2-1');">项目信息维护</a>
                 </li>
                 <li><a id="btn22" href="#" class="easyui-linkbutton" data-options="" onclick="jumpMenu('2-2');">项目开工确认</a>
                 </li>
