--- a/src/main/resources/templates/materialTypeLevelTwoMaster.html
+++ b/src/main/resources/templates/materialTypeLevelTwoMaster.html
@@ -28,11 +28,11 @@
                 <input name="id" class="easyui-textbox" label="主键" style="width:100%"/>
             </div>
             <div style="margin-bottom:10px">
-                <input name="name" class="easyui-textbox" required="true" label="二级分类编号" style="width:100%"
+                <input name="code" class="easyui-textbox" required="true" label="二级分类编号" style="width:100%"
                        data-options="validType:['length[0,10]']"/>
             </div>
             <div style="margin-bottom:10px">
-                <input name="code" class="easyui-textbox" required="true" label="二级分类名称" style="width:100%"
+                <input name="name" class="easyui-textbox" required="true" label="二级分类名称" style="width:100%"
                        data-options="validType:['length[0,100]']"/>
             </div>
             <div style="margin-bottom:10px">
