--- a/src/main/resources/templates/userMaster.html
+++ b/src/main/resources/templates/userMaster.html
@@ -27,13 +27,17 @@
             <div style="margin-bottom:10px" hidden="hidden">
                 <input name="id" class="easyui-textbox" label="主键" style="width:100%"/>
             </div>
-            <div style="margin-bottom:10px">
-                <input name="code" class="easyui-textbox" required="true" label="编号" style="width:100%"
-                       data-options="validType:['length[0,10]']"/>
-            </div>
+
             <div style="margin-bottom:10px">
                 <input name="name" class="easyui-textbox" required="true" label="姓名" style="width:100%"
                        data-options="validType:['length[0,15]']"/>
+            </div>
+            <div style="margin-bottom:10px">
+                <input name="code" class="easyui-textbox" required="true" label="用户名" style="width:100%"
+                       data-options="validType:['length[0,10]']"/>
+            </div>
+            <div style="margin-bottom:10px">
+                <input name="password" class="easyui-passwordbox" prompt="Password" iconWidth="28" required="true" label="密码" style="width:100%"/>
             </div>
             <div style="margin-bottom:10px">
                 <input name="sex" class="easyui-combobox" required="true" style="width:100%" label="性别"
